@@ -19,7 +19,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import lombok.experimental.UtilityClass;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONNull;
@@ -87,7 +86,7 @@ class FindingParser extends ModelParser {
                 .map(alias::getString)
                 .filter(Predicate.not(vulnId::equalsIgnoreCase)))
                 .distinct()
-                .collect(Collectors.toList())
+                .toList()
                 : null;
     }
 }
